First commited as before_111130_rev2